poprawki do main po lab6